--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -39,19 +39,6 @@
       <div ng-view=""></div>
     </div>
 
-<div class='container'>
-    <div ng-controller="SearchCtrl">
-        </br>
-        Seach: <input type="text" ng-model="selected" typeahead="property as (property.City + ' '+property.Street + ' ' + property.District) for property in properties | filter:$viewValue" />
-        </br>
-        <b>Selected property:</b>
-
-        {{selected}}
-
-    </div>
-</div>
-
-
     <footer>
       <div class="container">
         <p>Copyright &copy; 2015 <a href="https://github.com/Milan26/property-broker">P-Broker</a>. All Rights Reserved.</p>
@@ -68,6 +55,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -76,6 +64,7 @@
     <script src="scripts/routes/routes.js"></script>
     <script src="scripts/services/property-service.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/directives/search-directive/search-directive.js"></script>
     <!-- endbuild -->
 </body>
 </html>
