--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/services/property-service.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/search-directive/search-directive.js"></script>
+    <script src="scripts/directives/avgPrice-directive/avgPrice-directive.js"></script>
     <!-- endbuild -->
 </body>
 </html>
