Minor code changes

--- a/frontend/app/scripts/directives/avgPrice-directive/avgPrice-directive.html
+++ b/frontend/app/scripts/directives/avgPrice-directive/avgPrice-directive.html
@@ -4,7 +4,7 @@
             <th>District</th>
             <th>Avg Price [czk/m2]</th>
             <th>Count</th>
-            <!-- pocect nehnutelnosti na predja v districte-->
+            <!-- pocect nehnutelnosti na predj v districte-->
             <th>Avg Price</th>
             <th>Most Expensive Property in District</th>
             <th>Cheapest Property in District</th>
@@ -46,10 +46,10 @@
                 <th>Street Name</th>
                 <th>Avg Price [czk/m2]</th>
                 <th>Count</th>
-                <!-- pocect nehnutelnosti na predja v ulici-->
+                <!-- pocect nehnutelnosti na predj v ulici-->
                 <th>Avg Price</th>
-                <th>Most Expensive Property in Street</th>
-                <th>Cheapest Property in Street</th>
+                <th>Most Expensive Property on Street</th>
+                <th>Cheapest Property on Street</th>
             </tr>
             <tr ng-repeat="districtValue in districtValues.Streets  | orderBy:'-AvgPriceMSquare' ">
                 <td>
