Minor code changes

--- a/frontend/app/scripts/directives/avgPrice-directive/avgPrice-directive.html
+++ b/frontend/app/scripts/directives/avgPrice-directive/avgPrice-directive.html
@@ -4,7 +4,7 @@
             <th>District</th>
             <th>Avg Price [czk/m2]</th>
             <th>Count</th>
-            <!-- pocect nehnutelnosti na predj v districte-->
+            <!-- pocect nehnutelnosti na predaj v districte-->
             <th>Avg Price</th>
             <th>Most Expensive Property in District</th>
             <th>Cheapest Property in District</th>
@@ -46,7 +46,7 @@
                 <th>Street Name</th>
                 <th>Avg Price [czk/m2]</th>
                 <th>Count</th>
-                <!-- pocect nehnutelnosti na predj v ulici-->
+                <!-- pocect nehnutelnosti na predaj v ulici-->
                 <th>Avg Price</th>
                 <th>Most Expensive Property on Street</th>
                 <th>Cheapest Property on Street</th>
