--- a/frontend/app/scripts/directives/search-directive/search-directive.html
+++ b/frontend/app/scripts/directives/search-directive/search-directive.html
@@ -5,10 +5,10 @@
                class="form-control"
                placeholder="Start typing..."
                ng-model="selected"
-               typeahead-min-length="1"
+               typeahead-min-length="2"
                typeahead-wait-ms="400"
                typeahead-on-select="propertySelected($item)"
-               typeahead="property as (property.Street + ', ' + property.District + ' [' + property.Area + ' m2, ' + property.Price + ' CZK]') for property in values | filter:$viewValue" />
+               typeahead="property as (property.address.street + ', ' + property.address.district + ' [' + property.area + ' m2, ' + property.price + ' CZK]') for property in data | filter:$viewValue" />
     </div>
 </div>
 
