--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -22,14 +22,14 @@
 
     <!-- Add your site or application content here -->
     <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
+      <div class="container" ng-controller="HeaderController">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#/">P-Broker</a>
+          <li ng-class="{ active: isActive('/')}"><a class="navbar-brand" href="#/">Home</a></li>
         </div>
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">Home</a></li>
-            <li><a ng-href="#/about">About</a></li>
+            <li ng-class="{ active: isActive('/stats')}"><a href="#/stats">Statistics</a></li>
+            <li ng-class="{ active: isActive('/about')}"><a ng-href="#/about">About</a></li>
           </ul>
         </div>
       </div>
@@ -64,6 +64,8 @@
     <script src="scripts/routes/routes.js"></script>
     <script src="scripts/services/property-service.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/stats.js"></script>
+    <script src="scripts/controllers/header.js"></script>
     <script src="scripts/directives/search-directive/search-directive.js"></script>
     <script src="scripts/directives/statistics-directive/statistics-directive.js"></script>
     <!-- endbuild -->
