--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -66,6 +66,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/stats.js"></script>
     <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/pagination.js"></script>
     <script src="scripts/directives/search-directive/search-directive.js"></script>
     <script src="scripts/directives/statistics-directive/statistics-directive.js"></script>
     <!-- endbuild -->
