--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angular-growl-v2/build/angular-growl.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -16,27 +17,16 @@
     <!-- endbuild -->
   </head>
   <body ng-app="propertyBrokerApp">
+    <div growl></div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container" ng-controller="HeaderController">
-        <div class="navbar-header">
-          <li ng-class="{ active: isActive('/')}"><a class="navbar-brand" href="#/">Home</a></li>
-        </div>
-        <div class="collapse navbar-collapse" id="js-navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li ng-class="{ active: isActive('/stats')}"><a href="#/stats">Statistics</a></li>
-            <li ng-class="{ active: isActive('/about')}"><a ng-href="#/about">About</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <navbar></navbar>
 
     <div class="container">
-      <div ng-view=""></div>
+      <div ui-view=""></div>
     </div>
 
     <footer>
@@ -52,10 +42,11 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -65,10 +56,10 @@
     <script src="scripts/services/property-service.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/stats.js"></script>
-    <script src="scripts/controllers/header.js"></script>
-    <script src="scripts/controllers/pagination.js"></script>
+    <script src="scripts/directives/navbar-directive/navbar-directive.js"></script>
     <script src="scripts/directives/search-directive/search-directive.js"></script>
     <script src="scripts/directives/statistics-directive/statistics-directive.js"></script>
+    <script src="scripts/directives/propertiesCollection-directive/propertiesCollection-directive.js"></script>
     <!-- endbuild -->
 </body>
 </html>
