--- a/frontend/app/scripts/directives/propertiesCollection-directive/propertiesCollection-directive.html
+++ b/frontend/app/scripts/directives/propertiesCollection-directive/propertiesCollection-directive.html
@@ -3,11 +3,14 @@
 
     <div ng-repeat="property in filteredProperties">
         <!-- TODO: design -->
+     <a ng-click="propertySelected(property)">
         <span>Property</span>
         <span>Address: {{ property.address.street }}, {{ property.address.district }}, {{ property.address.city }}</span>
         <span>Type: {{ property.type }}</span>
         <span>Area: {{ property.area }}</span>
         <span>Price: {{ property.price }}</span>
+     </a>
+
     </div>
     <pagination total-items="totalItems"
                 items-per-page="itemsPerPage"
