List-group and markers for properties

--- a/frontend/app/scripts/directives/propertiesCollection-directive/propertiesCollection-directive.html
+++ b/frontend/app/scripts/directives/propertiesCollection-directive/propertiesCollection-directive.html
@@ -1,16 +1,16 @@
 <div>
     <search data="properties" query="query"></search>
 
-    <div ng-repeat="property in filteredProperties">
-        <!-- TODO: design -->
-        <a ng-click="propertySelected(property)">
-            <span>Property</span>
-            <span>Address: {{ property.address.street }}, {{ property.address.district }}, {{ property.address.city }}</span>
-            <span>Type: {{ property.type }}</span>
-            <span>Area: {{ property.area }}</span>
-            <span>Price: {{ property.price }}</span>
-        </a>
+    <div class="container" id = "properties">
+        <h2>Properties</h2>
+        <div class="list-group">
+            <a href="#" class="list-group-item" ng-repeat="property in filteredProperties" ng-click="propertySelected(property)">
+                <h4 class="list-group-item-heading">Property: {{ property.address.street }}, {{ property.address.district }}, {{ property.address.city }}</h4>
+                <p class="list-group-item-text">Type: {{ property.type }}, Area: {{ property.area }}, Price: {{ property.price }}</p>
+            </a>
+        </div>
     </div>
+    
     <pagination total-items="totalItems"
                 items-per-page="itemsPerPage"
                 max-size= "maxSize"
